--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
     <body>
         <script>alert('You will be redirected to akbar.kustirama.id in 5 seconds.')</script>
         <img src="https://assets.codelatte.net/images/uploads/dino.jpeg">
-        <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="d2b3b9b0b3a092b9a7a1a6bba0b3bfb3fcbbb6">[email&#160;protected]</a>
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
+        akbar@kustirama.id
+    </body>
 </html>
