--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <body>
         <script>alert('You will be redirected to akbar.kustirama.id in 5 seconds.')</script>
-        <img src="https://assets.codelatte.net/images/uploads/dino.jpeg">
+        <img src="https://assets.codelatte.id/images/uploads/dino.jpeg">
         akbar@kustirama.id
     </body>
 </html>
