Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <meta property="og:image:alt" content="akbar | kustirama.id" />
 
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@abaykandotcom" />
-        <meta name="twitter:creator" content="@abaykandotcom" />
+        <meta name="twitter:site" content="@kustirama" />
+        <meta name="twitter:creator" content="@kustirama" />
         <style>
         	@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
             .wrapper {
@@ -50,19 +50,12 @@
                 }
             }
         </style>
-
-        <?php
-		$link = (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS']
-					=== 'on' ? "https" : "http") . "://" .
-					$_SERVER['HTTP_HOST'] . $_SERVER['PHP_SELF'];
-		?>
-
         <script type="application/ld+json">
 			{
 			  "@context": "https://schema.org/",
 			  "@type": "WebSite",
 			  "name": "akbar.kustirama.id",
-			  "url": "<?=$link?>",
+			  "url": "https://abaykan.com",
 			  "potentialAction": {
 			    "@type": "SearchAction",
 			    "target": "{search_term_string}",
