--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>kustirama.id</title>
-        <!-- <meta http-equiv="refresh" content="5;url=https://akbar.kustirama.id/" /> -->
+        <meta http-equiv="refresh" content="5;url=https://akbar.kustirama.id/" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="https://assets.codelatte.id/images/uploads/dino.png" />
 
